feat: improve ai assistant widget | sas

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -98,7 +98,7 @@
         <div class="ai-answer">
           <p-icon class="ai-icon" source="/templates/assets/ai.svg" theme="dark"></p-icon>
           <p-heading class="self-center" size="small" tag="h2">Porsche AI</p-heading>
-          <div class="my-md grid col-start-2 gap-static-sm">
+          <div class="my-static-md grid col-start-2 gap-static-sm">
             <span class="ai-skeleton w-4/5 h-sm rounded-sm"></span>
             <span class="ai-skeleton w-4/5 h-sm rounded-sm"></span>
             <span class="ai-skeleton w-3/5 h-sm rounded-sm"></span>
@@ -164,14 +164,14 @@
 
             <div class="my-static-md me-static-xl grid gap-sm">
               <a class="ai-cta" href="/templates/assets/porsche-models.pdf" target="_blank">
-                <p-icon class="bg-background-frosted rounded-md p-static-sm" name="document"></p-icon>
+                <p-icon class="bg-background-frosted backdrop-blur-[32px] rounded-md p-[10px]" name="document"></p-icon>
                 <span>
                   <p-text>porsche-models.pdf</p-text>
                   <p-text size="xx-small" color="contrast-medium" ellipsis>PDF file</p-text>
                 </span>
               </a>
               <a class="ai-cta" href="https://www.porsche.com/germany/models/911/carrera-models/911-carrera/" target="_blank">
-                <p-icon class="bg-background-frosted rounded-md p-static-sm" name="external"></p-icon>
+                <p-icon class="bg-background-frosted backdrop-blur-[32px] rounded-md p-[10px]" name="external"></p-icon>
                 <span>
                   <p-text>Porsche 911 technical data</p-text>
                   <p-text size="xx-small" color="contrast-medium" ellipsis>https://www.porsche.com/germany/models/911/carrera-models/911-carrera/</p-text>
@@ -204,15 +204,15 @@
 
             <div class="my-static-md me-static-xl grid gap-sm">
               <a class="ai-cta" href="tel:+4971191132900">
-                <p-icon class="bg-background-frosted rounded-md p-static-sm" name="phone"></p-icon>
+                <p-icon class="bg-background-frosted backdrop-blur-[32px] rounded-md p-[10px]" name="phone"></p-icon>
                 <p-text>+49 711 91132900</p-text>
               </a>
               <a class="ai-cta" href="https://wa.me/1XXXXXXXXXX">
-                <p-icon class="bg-background-frosted rounded-md p-static-sm" name="logo-whatsapp"></p-icon>
+                <p-icon class="bg-background-frosted backdrop-blur-[32px] rounded-md p-[10px]" name="logo-whatsapp"></p-icon>
                 <p-text>Launch WhatsApp Messenger</p-text>
               </a>
               <a class="ai-cta" href="mailto:name@email.com">
-                <p-icon class="bg-background-frosted rounded-md p-static-sm" name="email"></p-icon>
+                <p-icon class="bg-background-frosted backdrop-blur-[32px] rounded-md p-[10px]" name="email"></p-icon>
                 <p-text>Send request</p-text>
               </a>
             </div>
