add external link description | oh

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -164,7 +164,7 @@
             <p-text>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p-text>
 
             <div class="my-static-md me-static-xl grid gap-sm">
-              <a class="ai-cta" href="/templates/assets/porsche-models.pdf" target="_blank" aria-label="Download Porsche Models PDF">
+              <a class="ai-cta" href="/templates/assets/porsche-models.pdf" target="_blank" aria-label="Download Porsche Models PDF" aria-describedby="external-link">
                 <p-icon class="bg-background-frosted backdrop-blur-[32px] rounded-md p-[10px]" name="document"></p-icon>
                 <span>
                   <p-text>porsche-models.pdf</p-text>
