--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -68,10 +68,10 @@
               </p-tag>
             </div>
           </p-scroller>
-          <label class="ai-upload" tabindex="0" aria-label="Upload media" onclick="this.previousElementSibling.removeAttribute('hidden');">
-            <input type="file" name="media" accept="image/png, image/jpeg" hidden />
+          <button type="button" class="ai-upload" aria-label="Upload media" onclick="this.previousElementSibling.removeAttribute('hidden'); this.nextElementSibling.click();">
             <p-icon name="attachment"></p-icon>
-          </label>
+          </button>
+          <input type="file" name="media" accept="image/png, image/jpeg" hidden />
           <textarea class="ai-input" name="question" rows="1" placeholder="Message AI Assistant" aria-label="Message AI Assistant"></textarea>
           <p-button-pure type="button" icon="microphone" hide-label="true">Use microphone</p-button-pure>
           <p-button href="#" type="submit" variant="primary" theme="dark" hide-label="true" icon="arrow-up">Ask AI Assistant</p-button>
