add aria-label to textarea | oh

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -340,7 +340,7 @@
             <p-icon name="attachment"></p-icon>
           </button>
           <input type="file" name="media" accept="image/png, image/jpeg" hidden />
-          <textarea class="ai-input" name="question" rows="1" placeholder="Message AI Assistant"></textarea>
+          <textarea class="ai-input" name="question" rows="1" placeholder="Message AI Assistant" aria-label="Message AI Assistant"></textarea>
           <p-button-pure type="button" icon="microphone" hide-label="true">Use microphone</p-button-pure>
           <p-button href="#" type="submit" variant="primary" theme="dark" hide-label="true" icon="arrow-up">Ask AI Assistant</p-button>
         </form>
