feat: improve ai assistant widget | sas

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -22,7 +22,7 @@
 
   <template id="template-login">
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-md min-h-full">
-      <div class="grid gap-sm content-center justify-items-center mx-static-lg my-static-xl z-0">
+      <div class="grid gap-sm content-center justify-items-center m-static-lg z-0">
         <p-icon source="/templates/assets/ai.svg" size="x-large"></p-icon>
         <p-heading size="large" align="center" tag="h2">Welcome to Ask Porsche</p-heading>
       </div>
@@ -35,7 +35,7 @@
 
   <template id="template-intro">
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-md min-h-full">
-      <div class="grid gap-sm content-center justify-items-center mx-static-lg my-static-xl z-0">
+      <div class="grid gap-sm content-center justify-items-center m-static-lg z-0">
         <p-icon source="/templates/assets/ai.svg" size="x-large"></p-icon>
         <p-heading size="large" align="center" tag="h2">I'm the AI Assistant of Porsche.</p-heading>
         <p-text size="medium" align="center">How can I help you?</p-text>
