feat: improve ai assistant widget | sas

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -264,9 +264,9 @@
           <div class="grid col-start-2 gap-sm">
             <p-text>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p-text>
 
-            <div class="my-static-md me-static-xl grid gap-sm">
+            <div class="my-static-md me-static-xl flex flex-col gap-sm">
               <audio class="w-full" src="/assets/gt3-sound.wav" controls></audio>
-              <video class="w-full rounded-md" src="/assets/ocean.mp4" poster="/assets/ocean.jpg" controls></video>
+              <video class="w-full aspect-video rounded-md" src="/assets/ocean.mp4" poster="/assets/ocean.jpg" controls></video>
             </div>
 
             <p-text class="me-static-xl" size="xx-small" color="contrast-medium">Porsche AI answers are AI generated and could be incorrect. Please check information for accuracy.</p-text>
