fix: migrate flyout-multilevel to drilldown for shop-product-list | sas

--- a/src/shop-product-list/index.html
+++ b/src/shop-product-list/index.html
@@ -337,8 +337,8 @@
   </div>
 </p-flyout>
 
-<p-flyout-multilevel id="flyout-menu" active-identifier="women" aria="{'aria-label': 'Main navigation'}">
-  <p-flyout-multilevel-item identifier="women" label="Women">
+<p-drilldown id="flyout-menu" active-identifier="women" aria="{'aria-label': 'Main navigation'}">
+  <p-drilldown-item identifier="women" label="Women">
     <p-link-tile
       href="#"
       label="Martini Racing® Collection"
@@ -352,29 +352,29 @@
            alt="Some alternative text for screen readers describing the image"/>
     </p-link-tile>
     <h3>Apparel</h3>
-    <a href="#">Jacket</a>
-    <a href="#">Polo & Shirts</a>
-    <a href="#">Sweaters</a>
-    <a href="#">T-Shirt</a>
-    <a href="#">Socks</a>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">Jacket</p-drilldown-link>
+    <p-drilldown-link href="#">Polo & Shirts</p-drilldown-link>
+    <p-drilldown-link href="#">Sweaters</p-drilldown-link>
+    <p-drilldown-link href="#">T-Shirt</p-drilldown-link>
+    <p-drilldown-link href="#">Socks</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Accessories</h3>
-    <a href="#">Caps</a>
-    <a href="#">Belts</a>
-    <a href="#">Beanies, Scarves & Gloves</a>
-    <a href="#">Timepieces</a>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">Caps</p-drilldown-link>
+    <p-drilldown-link href="#">Belts</p-drilldown-link>
+    <p-drilldown-link href="#">Beanies, Scarves & Gloves</p-drilldown-link>
+    <p-drilldown-link href="#">Timepieces</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Collection</h3>
-    <a href="#">Transformers</a>
-    <a href="#">MARTINI RACING®</a>
-    <a href="#">Dakar</a>
-    <a href="#">Penske Motorsport</a>
-    <a href="#">Porsche x FIN</a>
-    <a href="#">Essential</a>
-    <a href="#">Motorsport</a>
-    <a href="#">View all</a>
-  </p-flyout-multilevel-item>
-  <p-flyout-multilevel-item identifier="men" label="Men">
+    <p-drilldown-link href="#">Transformers</p-drilldown-link>
+    <p-drilldown-link href="#">MARTINI RACING®</p-drilldown-link>
+    <p-drilldown-link href="#">Dakar</p-drilldown-link>
+    <p-drilldown-link href="#">Penske Motorsport</p-drilldown-link>
+    <p-drilldown-link href="#">Porsche x FIN</p-drilldown-link>
+    <p-drilldown-link href="#">Essential</p-drilldown-link>
+    <p-drilldown-link href="#">Motorsport</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
+  </p-drilldown-item>
+  <p-drilldown-item identifier="men" label="Men">
     <p-link-tile
       href="#"
       label="Martini Racing® Collection"
@@ -388,32 +388,32 @@
            alt="Some alternative text for screen readers describing the image"/>
     </p-link-tile>
     <h3>Apparel</h3>
-    <a href="#">Jacket</a>
-    <a href="#">Pants</a>
-    <a href="#">Polo & Shirts</a>
-    <a href="#">Sweaters</a>
-    <a href="#">T-Shirt</a>
-    <a href="#">Socks</a>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">Jacket</p-drilldown-link>
+    <p-drilldown-link href="#">Pants</p-drilldown-link>
+    <p-drilldown-link href="#">Polo & Shirts</p-drilldown-link>
+    <p-drilldown-link href="#">Sweaters</p-drilldown-link>
+    <p-drilldown-link href="#">T-Shirt</p-drilldown-link>
+    <p-drilldown-link href="#">Socks</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Accessories</h3>
-    <a href="#">Caps</a>
-    <a href="#">Belts</a>
-    <a href="#">Beanies, Scarves & Gloves</a>
-    <a href="#">Timepieces</a>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">Caps</p-drilldown-link>
+    <p-drilldown-link href="#">Belts</p-drilldown-link>
+    <p-drilldown-link href="#">Beanies, Scarves & Gloves</p-drilldown-link>
+    <p-drilldown-link href="#">Timepieces</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Footwear</h3>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Collection</h3>
-    <a href="#">Transformers</a>
-    <a href="#">MARTINI RACING®</a>
-    <a href="#">Dakar</a>
-    <a href="#">Penske Motorsport</a>
-    <a href="#">Porsche x FIN</a>
-    <a href="#">Essential</a>
-    <a href="#">Motorsport</a>
-    <a href="#">View all</a>
-  </p-flyout-multilevel-item>
-  <p-flyout-multilevel-item identifier="kids" label="Kids">
+    <p-drilldown-link href="#">Transformers</p-drilldown-link>
+    <p-drilldown-link href="#">MARTINI RACING®</p-drilldown-link>
+    <p-drilldown-link href="#">Dakar</p-drilldown-link>
+    <p-drilldown-link href="#">Penske Motorsport</p-drilldown-link>
+    <p-drilldown-link href="#">Porsche x FIN</p-drilldown-link>
+    <p-drilldown-link href="#">Essential</p-drilldown-link>
+    <p-drilldown-link href="#">Motorsport</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
+  </p-drilldown-item>
+  <p-drilldown-item identifier="kids" label="Kids">
     <p-link-tile
       href="#"
       label="Playmobil® 911 Carrera RS 2.7"
@@ -427,13 +427,13 @@
            alt="Some alternative text for screen readers describing the image"/>
     </p-link-tile>
     <h3>Kids</h3>
-    <a href="#">Apparel</a>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">Apparel</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Accessories</h3>
-    <a href="#">Toys</a>
-    <a href="#">View all</a>
-  </p-flyout-multilevel-item>
-  <p-flyout-multilevel-item identifier="accessories" label="Accessories">
+    <p-drilldown-link href="#">Toys</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
+  </p-drilldown-item>
+  <p-drilldown-item identifier="accessories" label="Accessories">
     <p-link-tile
       href="#"
       label="Umbrella Martini Racing®"
@@ -447,23 +447,23 @@
            alt="Some alternative text for screen readers describing the image"/>
     </p-link-tile>
     <h3>Accessories</h3>
-    <a href="#">Bags & Luggage</a>
-    <a href="#">Eyewear</a>
-    <a href="#">Calendar & Books</a>
-    <a href="#">Golf</a>
-    <a href="#">Home & Office</a>
-    <a href="#">Key Rings & Others</a>
-    <a href="#">Timepieces</a>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">Bags & Luggage</p-drilldown-link>
+    <p-drilldown-link href="#">Eyewear</p-drilldown-link>
+    <p-drilldown-link href="#">Calendar & Books</p-drilldown-link>
+    <p-drilldown-link href="#">Golf</p-drilldown-link>
+    <p-drilldown-link href="#">Home & Office</p-drilldown-link>
+    <p-drilldown-link href="#">Key Rings & Others</p-drilldown-link>
+    <p-drilldown-link href="#">Timepieces</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Collection</h3>
-    <a href="#">75 Years</a>
-    <a href="#">MARTINI RACING®</a>
-    <a href="#">Porsche x FIN</a>
-    <a href="#">Heritage 2.0</a>
-    <a href="#">Sports</a>
-    <a href="#">View all</a>
-  </p-flyout-multilevel-item>
-  <p-flyout-multilevel-item identifier="model-cars" label="Model Cars">
+    <p-drilldown-link href="#">75 Years</p-drilldown-link>
+    <p-drilldown-link href="#">MARTINI RACING®</p-drilldown-link>
+    <p-drilldown-link href="#">Porsche x FIN</p-drilldown-link>
+    <p-drilldown-link href="#">Heritage 2.0</p-drilldown-link>
+    <p-drilldown-link href="#">Sports</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
+  </p-drilldown-item>
+  <p-drilldown-item identifier="model-cars" label="Model Cars">
     <p-link-tile
       href="#"
       label="911 Targa S 2.4 (1972)"
@@ -477,14 +477,14 @@
            alt="Some alternative text for screen readers describing the image"/>
     </p-link-tile>
     <h3>Model Cars</h3>
-    <a href="#">718</a>
-    <a href="#">911</a>
-    <a href="#">Taycan</a>
-    <a href="#">Macan</a>
-    <a href="#">Others</a>
-    <a href="#">View all</a>
-  </p-flyout-multilevel-item>
-  <p-flyout-multilevel-item identifier="porsche-design" label="Porsche Design">
+    <p-drilldown-link href="#">718</p-drilldown-link>
+    <p-drilldown-link href="#">911</p-drilldown-link>
+    <p-drilldown-link href="#">Taycan</p-drilldown-link>
+    <p-drilldown-link href="#">Macan</p-drilldown-link>
+    <p-drilldown-link href="#">Others</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
+  </p-drilldown-item>
+  <p-drilldown-item identifier="porsche-design" label="Porsche Design">
     <p-link-tile
       href="#"
       label="Sunglasses P´8508"
@@ -498,19 +498,19 @@
            alt="Some alternative text for screen readers describing the image"/>
     </p-link-tile>
     <h3>Apparel</h3>
-    <a href="#">Bottoms</a>
-    <a href="#">Sweaters</a>
-    <a href="#">T-Shirts</a>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">Bottoms</p-drilldown-link>
+    <p-drilldown-link href="#">Sweaters</p-drilldown-link>
+    <p-drilldown-link href="#">T-Shirts</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Accessories</h3>
-    <a href="#">Bags & Luggage</a>
-    <a href="#">Fragrances</a>
-    <a href="#">Sunglasses</a>
-    <a href="#">View all</a>
+    <p-drilldown-link href="#">Bags & Luggage</p-drilldown-link>
+    <p-drilldown-link href="#">Fragrances</p-drilldown-link>
+    <p-drilldown-link href="#">Sunglasses</p-drilldown-link>
+    <p-drilldown-link href="#">View all</p-drilldown-link>
     <h3>Footwear</h3>
-    <a href="#">View all</a>
-  </p-flyout-multilevel-item>
-  <p-flyout-multilevel-item identifier="christmas" label="Christmas">
+    <p-drilldown-link href="#">View all</p-drilldown-link>
+  </p-drilldown-item>
+  <p-drilldown-item identifier="christmas" label="Christmas">
     <p-link-tile
       href="#"
       label="911 Dakar 992 Xmas Ltd. Edition"
@@ -524,11 +524,11 @@
            alt="Some alternative text for screen readers describing the image"/>
     </p-link-tile>
     <h3>Gifts</h3>
-    <a href="#">For Him</a>
-    <a href="#">For Her</a>
-    <a href="#">For Kids</a>
-  </p-flyout-multilevel-item>
-</p-flyout-multilevel>
+    <p-drilldown-link href="#">For Him</p-drilldown-link>
+    <p-drilldown-link href="#">For Her</p-drilldown-link>
+    <p-drilldown-link href="#">For Kids</p-drilldown-link>
+  </p-drilldown-item>
+</p-drilldown>
 
 <p-modal heading="Size Chart" id="modal-size-chart">
   <!-- Use only one modal for size-chart and replace its content dynamically -->
